--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -4,4 +4,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-image: url(../../imgs/luminosity-led-logo.png);
+    background-repeat: no-repeat;
+    background-position: top;
+    background-color: whitesmoke;
 }
