--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -1,3 +1,14 @@
+* {
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Trebuchet MS';
+}
+
+@font-face {
+    font-family: 'Trebuchet MS';
+    src: null;
+}
+
 .App {
     height: 100vh;
     width: 100%;
