--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -1,46 +1,95 @@
 * {
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Trebuchet MS';
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Trebuchet MS";
 }
 
 @font-face {
-    font-family: 'Trebuchet MS';
-    src: null;
+  font-family: "Trebuchet MS";
+  src: null;
 }
 
 .App {
-    height: 100vh;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-image: url(../imgs/luminosity-led-logo.png);
-    background-repeat: no-repeat;
-    background-position: top;
-    background-color: whitesmoke;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url(https://wallpaperaccess.com/full/5227230.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top;
+  background-color: whitesmoke;
+  margin: 0;
 }
 
 .login-btn {
-    height: 2em;
-    width: 35%;
-    background-color: lightskyblue;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 0.5em;
+  height: 2em;
+  width: 35%;
+  background-color: lightskyblue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0.5em;
 }
 
-.login-btn:hover { transform: scale(1.15);}
+.login-btn:hover {
+  transform: scale(1.15);
+}
 
 .sign-up-btn {
-    height: 2em;
-    width: 35%;
-    background-color: lightskyblue;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 0.5em;
+  height: 2em;
+  width: 35%;
+  background-color: lightskyblue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0.5em;
 }
 
-.sign-up-btn:hover { transform: scale(1.15);}
+.sign-up-btn:hover {
+  transform: scale(1.15);
+}
+
+.site-title {
+  font-size: 2rem;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  background-color: rgb(255, 255, 255);
+  background-size: 700;
+  color: lightskyblue;
+  align-items: stretch;
+  gap: 2rem;
+  padding: 0 25px;
+}
+
+.nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap: 1rem;
+}
+
+.nav a {
+  color: inherit;
+  text-decoration: none;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding: 0.25rem;
+}
+
+.nav li:hover {
+  color: rgb(0, 0, 0);
+}
+img {
+  height: 45px;
+  position: absolute;
+  left: 260px;
+  align-items: stretch;
+}
