underscore on footer btns hover

--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -265,8 +265,26 @@ input:focus {
   columns: 2;
 }
 
+/* Footer 'luminosityleds' column */
+.about:hover {
+  text-decoration: underline;
+  display: inline-block;
+}
+
+.team:hover {
+  text-decoration: underline;
+  display: inline-block;
+}
+
+.whats-new:hover {
+  text-decoration: underline;
+  display: inline-block;
+}
+
 /* Hyperlinks/Anchors */
 a {
   text-decoration: none;
   color: inherit;
 }
+
+
