--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -187,6 +187,17 @@ input:focus {
   }
 }
 
+/* Logged In and Out Nav */
+.loggedOutNav {
+  margin-top: 0.75em;
+  margin-right: 0.5em;
+}
+
+.loggedInNav {
+  margin-top: 1em;
+  margin-right: 0.5em;
+}
+
 /* Logo */
 
 .header_logo_long {
