--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -270,3 +270,36 @@ align-items: center;
 border-radius: 0.5em;
 grid-gap: 25%;
 }
+
+/* Adding a Device */
+.addDevice-button {
+  background-color: #F4845F;
+  color: #000000;
+  padding: 10px 20px;
+  border-radius: 10px;
+  border: none;
+  font-size: 16px;
+  cursor: pointer;
+  position: fixed;
+}
+
+.uuid-prompt {
+  background-color: #F4845F;
+  border: 1px solid orange;
+  border-radius: 10px;
+  display:flex;
+  padding: 10px;
+  position: absolute;
+  width: 150px;
+  box-shadow: 2px 2px 10px orange;
+  margin-top: 40px;
+  align-items: center;
+}
+
+.uuid-prompt input {
+  border: none;
+  border-bottom: 1px solid orange;
+  padding: 5px;
+  margin-right: 10px;
+  width: 100%;
+}
