added uuid input user feedback

--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -303,3 +303,13 @@ grid-gap: 25%;
   margin-right: 10px;
   width: 100%;
 }
+
+.faPlus{
+  color: rgb(0, 0, 0)
+}
+.faCheck{
+  color: green
+}
+.faXmark{
+  color: red
+}
