--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -295,7 +295,7 @@ text-align: center;
   border: none;
   font-size: 16px;
   cursor: pointer;
-  position: fixed;
+  position: relative;
 }
 
 .uuid-prompt {
@@ -307,7 +307,7 @@ text-align: center;
   position: absolute;
   width: 150px;
   box-shadow: 2px 2px 10px orange;
-  margin-top: 40px;
+  margin-top: 1px;
   align-items: center;
 }
 
