--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -280,7 +280,7 @@ grid-gap: 25%;
   border: none;
   font-size: 16px;
   cursor: pointer;
-  position: fixed;
+  position: relative;
 }
 
 .uuid-prompt {
@@ -292,7 +292,7 @@ grid-gap: 25%;
   position: absolute;
   width: 150px;
   box-shadow: 2px 2px 10px orange;
-  margin-top: 40px;
+  margin-top: 1px;
   align-items: center;
 }
 
